objects/EmailMessage.object
<CustomObject>
    <fields>
        <fullName>ClonedEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if an email was cloned via Apex Code.</description>
        <label>Cloned Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DoNotReopen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Reopen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewEmailId__c</fullName>
        <label>New Email Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalEmailId__c</fullName>
        <label>Original Email Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
<enableFeeds>false</enableFeeds></CustomObject>